# Cadly

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
docs/: cad-viewer-plan.md  ui-modernization-options.md
shaders/glsl/: background.frag  background.vert  brdf_lut.frag  brdf_lut.vert  edges.frag  edges.vert  env_capture.frag  env_capture.vert  grid.frag  grid.vert  irradiance.frag  irradiance.vert  pbr.frag  pbr.vert  pivot.frag  pivot.vert  prefilter.frag  prefilter.vert
src/app/: CMakeLists.txt
src/app/include/cadly/app/: RecentFiles.h  Settings.h  Theme.h
src/app/src/: RecentFiles.cpp  Settings.cpp  Theme.cpp  main.cpp
src/cad/: CMakeLists.txt
src/cad/include/cadly/cad/: ICadImporter.h  ImporterRegistry.h  OcctIgesImporter.h  OcctStepImporter.h  TessellationPolicy.h
src/cad/src/: ImporterRegistry.cpp  OcctIgesImporter.cpp  OcctShapeToMesh.cpp  OcctShapeToMesh.h  OcctStepImporter.cpp  TessellationPolicy.cpp  cad_import_cli.cpp
src/platform/: CMakeLists.txt
src/platform/include/cadly/platform/: Log.h  Paths.h
src/platform/src/: Log.cpp  Paths.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/cadly/renderer/: IRenderer.h  RenderTypes.h
src/renderer_gl/: CMakeLists.txt
src/renderer_gl/include/cadly/renderer_gl/: GLRenderer.h
src/renderer_gl/src/: GLFunctions.cpp  GLFunctions.h  GLRenderer.cpp  GLShader.cpp  GLShader.h
src/scene/: CMakeLists.txt
src/scene/include/cadly/scene/: Aabb.h  Camera.h  LightEnvironment.h  Material.h  Math.h  Mesh.h  Node.h  Scene.h  SelectionId.h  Transform.h
src/scene/src/: Aabb.cpp  Camera.cpp  Scene.cpp
src/ui/: CMakeLists.txt
src/ui/include/cadly/ui/: CameraController.h  ImportDiagnosticsDock.h  ImportOptionsDialog.h  MainWindow.h  ModelTreeDock.h  PropertiesDock.h  ViewportWidget.h
src/ui/src/: CameraController.cpp  ImportDiagnosticsDock.cpp  ImportOptionsDialog.cpp  MainWindow.cpp  ModelTreeDock.cpp  PropertiesDock.cpp  ViewportWidget.cpp
tests/: CMakeLists.txt  smoke_test.cpp
